
cc_library(
	name = "thread",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_io//:io",
		"@com_github_bazelboost_chrono//:chrono",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_atomic//:atomic",
		"@com_github_bazelboost_container//:container",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_intrusive//:intrusive",
		"@com_github_bazelboost_tuple//:tuple",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_functional//:functional",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_exception//:exception",
		"@com_github_bazelboost_system//:system",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_date_time//:date_time",
		"@com_github_bazelboost_winapi//:winapi"
	],
)
